--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -104,7 +104,7 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="32dp"
     android:contentDescription="@string/picture_logo"
-    android:src="@drawable/ic_group_5"
+    android:src="@drawable/ic_logo"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent"
