--- a/app/src/main/res/layout-land/activity_signin.xml
+++ b/app/src/main/res/layout-land/activity_signin.xml
@@ -28,7 +28,7 @@
     android:layout_width="250dp"
     android:layout_height="300dp"
     android:contentDescription="@string/picture_logo"
-    android:src="@drawable/ic_group_5"
+    android:src="@drawable/ic_logo"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/guideline2"
     app:layout_constraintStart_toStartOf="parent"
