--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
     android:contentDescription="@string/picture_logo"
-    android:src="@drawable/ic_group_5"
+    android:src="@drawable/ic_logo"
     app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
