--- a/app/src/main/res/layout/activity_list_story.xml
+++ b/app/src/main/res/layout/activity_list_story.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
@@ -7,62 +7,20 @@
   android:background="@color/gray_light"
   tools:context=".ui.activity.ListStoryActivity">
 
-  <LinearLayout
+  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <RelativeLayout
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content">
-
-      <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        style="@style/ToolbarTheme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/list_story">
-
-        <ImageView
-          android:id="@+id/iv_add_story"
-          android:layout_width="36dp"
-          android:layout_height="36dp"
-          android:layout_gravity="end"
-          android:layout_marginEnd="14dp"
-          android:clickable="true"
-          android:contentDescription="@string/post_story"
-          android:focusable="true"
-          android:src="@drawable/ic_capture" />
-
-        <ImageView
-          android:id="@+id/iv_show_map"
-          android:layout_width="36dp"
-          android:layout_height="36dp"
-          android:layout_gravity="end"
-          android:layout_marginEnd="14dp"
-          android:clickable="true"
-          android:contentDescription="@string/post_story"
-          android:focusable="true"
-          android:src="@drawable/ic_show_map" />
-      </androidx.appcompat.widget.Toolbar>
-
-    </RelativeLayout>
+    android:layout_marginTop="55dp"
+    app:layout_constraintTop_toTopOf="@id/toolbar">
 
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_story"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/toolbar"
+      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       tools:listitem="@layout/item_list_story" />
-  </LinearLayout>
+  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
   <ProgressBar
     android:id="@+id/progress_bar"
@@ -71,15 +29,59 @@
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     tools:visibility="visible" />
 
-  <TextView
-    android:id="@+id/tv_info"
-    style="@style/TextViewBold"
-    android:layout_width="wrap_content"
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
+    style="@style/ToolbarTheme"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:text="@string/error_occurred"
-    android:textSize="30sp" />
+    android:layout_gravity="end"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:title="@string/list_story"/>
 
-</RelativeLayout>
+  <ImageView
+    android:id="@+id/iv_add_story"
+    android:layout_width="36dp"
+    android:layout_height="36dp"
+    android:layout_gravity="end"
+    android:layout_marginEnd="8dp"
+    android:clickable="true"
+    android:contentDescription="@string/post_story"
+    android:focusable="true"
+    android:src="@drawable/ic_capture"
+    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+  <ImageView
+    android:id="@+id/iv_show_map"
+    android:layout_width="36dp"
+    android:layout_height="36dp"
+    android:layout_gravity="end"
+    android:layout_marginEnd="8dp"
+    android:clickable="true"
+    android:contentDescription="@string/post_story"
+    android:focusable="true"
+    android:src="@drawable/ic_show_map"
+    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+    app:layout_constraintEnd_toStartOf="@+id/iv_add_story"
+    app:layout_constraintTop_toTopOf="parent" />
+
+  <include
+    android:id="@+id/view_error"
+    layout="@layout/view_error"
+    android:visibility="gone"
+    tools:visibility="visible"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
