--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -17,7 +17,6 @@
     app:layout_constraintTop_toTopOf="parent" />
 
   <androidx.constraintlayout.widget.Guideline
-    android:id="@+id/guidelineHorizontal"
     android:layout_width="wrap_content"
     android:layout_height="64dp"
     android:orientation="horizontal"
@@ -42,7 +41,7 @@
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
     android:layout_marginBottom="8dp"
-    android:text="@string/by_waffiq"
+    android:text="@string/dicoding_course"
     android:textSize="14sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +65,6 @@
     app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
   <Button
-    android:id="@+id/btn_logOut"
     style="@style/BtnRegular"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
