--- a/app/src/main/res/layout/activity_detail_story.xml
+++ b/app/src/main/res/layout/activity_detail_story.xml
@@ -1,10 +1,29 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
-  tools:context=".ui.activity.DetailStoryActivity">
+  tools:context=".ui.activity.DetailStoryActivity"
+  android:id="@+id/detail_view">
+
+  <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/tv_created_time">
+
+    <TextView
+      android:id="@+id/tv_description"
+      style="@style/TextViewRegular"
+      android:transitionName="description"
+      tools:text="@string/description" />
+
+  </ScrollView>
 
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
@@ -13,81 +32,51 @@
     android:layout_height="wrap_content"
     android:layout_gravity="end"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     app:title="@string/detail_story" />
 
-  <LinearLayout
+
+  <ImageView
+    android:id="@+id/iv_story"
     android:layout_width="match_parent"
+    android:layout_height="400dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:contentDescription="@string/image_story"
+    android:transitionName="image"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/toolbar"
+    tools:src="@drawable/ic_place_holder" />
+
+  <TextView
+    android:id="@+id/tv_name"
+    style="@style/TextViewBold"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:orientation="vertical">
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="20dp"
+    android:textSize="20sp"
+    android:transitionName="name"
+    app:layout_constraintEnd_toStartOf="@+id/tv_created_time"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/iv_story"
+    tools:text="@string/name" />
 
-    <ImageView
-      android:id="@+id/iv_story"
-      android:layout_width="match_parent"
-      android:layout_height="400dp"
-      android:layout_marginTop="60dp"
-      android:contentDescription="@string/image_story"
-      android:transitionName="image"
-      tools:src="@drawable/ic_place_holder" />
+  <TextView
+    android:id="@+id/tv_created_time"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="16dp"
+    android:transitionName="created"
+    app:layout_constraintBottom_toBottomOf="@+id/tv_name"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/tv_name"
+    tools:text="@string/created_add" />
 
-    <LinearLayout
-      android:id="@+id/linearLayout"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="24dp"
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="24dp"
-      android:orientation="vertical">
 
-      <TextView
-        android:id="@+id/tv_name"
-        style="@style/TextViewBold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:textSize="20sp"
-        android:transitionName="name"
-        tools:text="@string/name" />
-
-      <TextView
-        android:id="@+id/tv_created_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:transitionName="created"
-        tools:text="@string/created_add" />
-
-    </LinearLayout>
-
-    <ScrollView
-      android:id="@+id/scrollView2"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginStart="24dp"
-      android:layout_marginEnd="24dp"
-      android:layout_marginBottom="24dp"
-      android:padding="10dp">
-
-      <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="vertical">
-
-        <TextView
-          android:id="@+id/tv_description"
-          style="@style/TextViewRegular"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center"
-          android:transitionName="description"
-          tools:text="@string/description" />
-      </LinearLayout>
-    </ScrollView>
-  </LinearLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
