--- a/app/src/main/res/layout/activity_detail_story.xml
+++ b/app/src/main/res/layout/activity_detail_story.xml
@@ -43,11 +43,12 @@
     android:layout_width="match_parent"
     android:layout_height="400dp"
     android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="12dp"
     android:layout_marginEnd="16dp"
     android:contentDescription="@string/image_story"
     android:transitionName="image"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/toolbar"
     tools:src="@drawable/ic_place_holder" />
